update store file supabase